[tool.poetry]
name = "CHRISTMASBOT"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "christmasbot" },
]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.5.1"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]